@@ -131,10 +131,22 @@
             <!-- Parts -->
             <div class="customize_pane">
                 <div class="tab_container flex">
-                    <button class="tab active_tab" id="tab_background" onclick="tab('background')">Background</button>
-                    <button class="tab" id="tab_body" onclick="tab('body')">Body</button>
-                    <button class="tab" id="tab_face" onclick="tab('face')">Face</button>
-                    <button class="tab" id="tab_extra" onclick="tab('extra')">Extra</button>
+                    <button class="tab button button_blue active_tab" id="tab_background" onclick="tab('background')">
+                        <p>Background</p>
+                        <div class="button_shade"></div>
+                    </button>
+                    <button class="tab button button_blue" id="tab_body" onclick="tab('body')">
+                        <p>Body</p>
+                        <div class="button_shade"></div>
+                    </button>
+                    <button class="tab button button_blue" id="tab_face" onclick="tab('face')">
+                        <p>Face</p>
+                        <div class="button_shade"></div>
+                    </button>
+                    <button class="tab button button_blue" id="tab_extra" onclick="tab('extra')">
+                        <p>Extra</p>
+                        <div class="button_shade"></div>
+                    </button>
                 </div>
                 <div class="content_container">
 
